Added load dialog, circle ROI drawing

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,4 @@ where = src
 [options.entry_points]
 console_scripts =
     pyDicomView = dicomUtils.ui.pyDicomView:main
+    pyDicomCircleROI = dicomUtils.ui.pyDicomCircleROI:main
