--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dafne-dicomUtils
-version = 0.1.2
+version = 0.1.3
 author = Dafne-Imaging Team
 author_email = francesco.santini@unibas.ch
 description = A package for DICOM utilities
@@ -21,7 +21,7 @@ install_requires =
     numpy
     scipy
     matplotlib
-    pydicom
+    pydicom >= 2.2.0
     ormir-pyvoxel
     qtpy
     progress
