Added alias to default imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dafne-dicomUtils
-version = 0.1.3
+version = 0.1.5
 author = Dafne-Imaging Team
 author_email = francesco.santini@unibas.ch
 description = A package for DICOM utilities
@@ -31,6 +31,9 @@ include_package_data = true
 
 [options.packages.find]
 where = src
+
+[options.package_data]
+dicomUtils = resources/*
 
 [options.entry_points]
 console_scripts =
